feat: add Dockerfile, .dockerignore, and database initialization script; update docker-compose.yml for new app structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,25 @@
 services:
-  database:
-    image: mysql:8.0
-    restart: on-failure
-    container_name: booking
-    command: --default-authentication-plugin=mysql_native_password
-    environment:
-      MYSQL_HOST: ${MYSQL_HOST}
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_USERNAME: ${MYSQL_USERNAME}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-    ports:
-      - "3306:3306"
+    app:
+        container_name: booking.app
+        build:
+            context: .
+            dockerfile: Dockerfile
+        environment:
+            - PORT=${PORT}
+        ports:
+            - '3001:3000'
+        depends_on:
+            - database
+        volumes:
+            - ./src:/app/src
+    database:
+        container_name: booking.database
+        image: mysql:5.7
+        restart: always
+        environment:
+            MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_DATABASE: ${MYSQL_DATABASE}
+        ports:
+            - "3307:3306"
+        volumes:
+            - ./database:/docker-entrypoint-initdb.d
